<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numero_quesito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/quesito_numero_it">
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/numero_quesito">

        <TextView
            android:id="@+id/quesito_testo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="ciao">
        </TextView>

        <LinearLayout
            android:id="@+id/pulsantiera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_below="@id/quesito_testo">

            <Button
                android:id="@+id/bottone_precedente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precedente_it">
            </Button>

            <Button
                android:id="@+id/bottone_vero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vero_it"
                android:backgroundTint="@color/green"
                android:textColor="@color/white">
            </Button>

            <Button
                android:id="@+id/bottone_falso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/falso_it"
                android:backgroundTint="@color/red"
                android:textColor="@color/white">
            </Button>

            <Button
                android:id="@+id/bottone_successivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/successivo_it">
            </Button>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_below="@id/pulsantiera">

            <TextView
                android:id="@+id/TVrisposteCorretteValide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="...">
            </TextView>

            <TextView
                android:id="@+id/TVrisposteCorretteNonValide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="...">
            </TextView>

            <TextView
                android:id="@+id/TVrisposteTotali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="...">
            </TextView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggerimento_it"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/yellow">
            </Button>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>